--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,8 +1,11 @@
 name: Upload Python Package
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - '**'
+    tags-ignore:
+      - 'v*' 
 
 permissions:
   contents: read
